examples/standard/simple-gateway/gateway.yaml
#$ Used in:
#$ - site-src/guides/traffic-splitting.md
#$ - site-src/guides/simple-gateway.md
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: prod-web
  labels:
    cluster.open-cluster-management.io/placement: http-gateway
spec:
  gatewayClassName: acme-lb
  listeners:
  - protocol: HTTP
    port: 80
    name: prod-web-gw
    allowedRoutes:
      namespaces:
        from: Same
